# DensityX

./: .gitignore  pyproject.toml
docs/source/: conf.py  example.ipynb  getting_started.md  index.rst  references.bib  usage.md
docs/source/.ipynb_checkpoints/: example-checkpoint.ipynb
src/densityx/: __init__.py  densityx.py  thermo_props.py
tests/: __init__.py  test_density.py
