[project]
authors = [{name = "fboschetty", email = "flix.bosch@hotmail.co.uk"}]
dependencies = []
name = "DensityX"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
densityx = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.2.3,<3"
pandas = ">=2.2.3,<3"
openpyxl = ">=3.1.5,<4"
sphinx = ">=8.2.3,<9"
nbsphinx = ">=0.9.7,<0.10"
sphinxcontrib-bibtex = ">=2.6.3,<3"
myst-parser = ">=4.0.1,<5"
sphinx-rtd-theme = ">=3.0.1,<4"
ipykernel = ">=6.29.5,<7"
matplotlib = ">=3.10.1,<4"
